# reimagined-octo-umbrella

./: Cargo.toml
circuits/red_channel/: red_channel.circom  red_channel.r1cs  red_channel.wasm
images/: extraxt_pixels.py  input.json
src/: main.rs
