[package]
name = "picture-transformations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
arecibo = "0.1.1"
bellpepper-core = "0.4.0"
circom-scotia = "0.2.0"
ff = "0.13.0"
image = "0.24.9"
pasta_curves = "0.5.1"
serde = "1.0.204"
serde_json = "1.0.120"
structopt = "0.3.26"
